--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -5,7 +5,7 @@
 	<title></title>
 </head>
 <body>
-	<div>Hello</div>
+	<div>Tic Tac Toe</div>
 	<table>
 	    <tr>
 	        <td></td>
@@ -23,6 +23,7 @@
 	        <td></td>
 	    </tr>
 	</table>
+	<button id="lock">Lock</button>
 </body>
 <script type="text/javascript" src="ticTacToe.js"></script>  
 </html>
