--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="ticTacToe.css" />
+	<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato">
 	<title></title>
 </head>
 <body>
-	<div>Tic Tac Toe</div>
+	<div id="title">Tic Tac Toe</div>
 	<table>
 	    <tr>
 	        <td></td>
@@ -23,7 +25,7 @@
 	        <td></td>
 	    </tr>
 	</table>
-	<button id="lock">Lock</button>
+	<button id="lock">Next Turn</button>
 </body>
 <script type="text/javascript" src="ticTacToe.js"></script>  
 </html>
