--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -10,19 +10,19 @@
 	<div id="title">Tic Tac Toe</div>
 	<table>
 	    <tr>
-	        <td></td>
-	        <td></td>
-	        <td></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
 	    </tr>
 	    <tr>
-	        <td></td>
-	        <td></td>
-	        <td></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
 	    </tr>
 	    <tr>
-	        <td></td>
-	        <td></td>
-	        <td></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
+	        <td><div class="icons"></div></td>
 	    </tr>
 	</table>
 	<button id="lock">Next Turn</button>
