added next game button (resets the game board)

--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -4,10 +4,14 @@
 	<link rel="stylesheet" type="text/css" href="ticTacToe.css" />
 	<link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 	<title></title>
 </head>
 <body>
 	<div id="title">Tic Tac Toe</div>
+
+	<button id="reset">New Game</button>
+
 	<table>
 	    <tr>
 	        <td><div class="icons"></div></td>
